objects/PI_Payout__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calls__c</fullName>
        <label>Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>PI Payouts</relationshipLabel>
        <relationshipName>PI_Payouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payout_Amount__c</fullName>
        <label>Payout Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payout_Gross__c</fullName>
        <formula>Payout_Amount__c *20/17</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payout Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>PI Payouts</relationshipLabel>
        <relationshipName>PI_Payouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Station</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>PI Payouts</relationshipLabel>
        <relationshipName>PI_Payouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>[Dep]Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X800_Number__c</fullName>
        <label>X800 Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <externalId>true</externalId>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>PI Payout</label>
    <listViews>
        <fullName>DELETEME</fullName>
        <columns>NAME</columns>
        <columns>Schedule__c</columns>
        <columns>Brand__c</columns>
        <columns>Calls__c</columns>
        <columns>Payout_Amount__c</columns>
        <columns>Market__c</columns>
        <columns>Response_Time__c</columns>
        <columns>Station__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Schedule__c</field>
            <operation>equals</operation>
            <value>A-1441394</value>
        </filters>
        <label>DELETEME</label>
    </listViews>
    <listViews>
        <fullName>today</fullName>
        <columns>NAME</columns>
        <columns>Schedule__c</columns>
        <columns>Brand__c</columns>
        <columns>Calls__c</columns>
        <columns>Payout_Amount__c</columns>
        <columns>Market__c</columns>
        <columns>Response_Time__c</columns>
        <columns>Station__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Schedule__c</field>
            <operation>equals</operation>
            <value>A-1787145</value>
        </filters>
        <label>today</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>PI Payout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Payouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>